--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="./css/styles.css"> 
 </head>
 
 <body>
-    <h1>About1</h1>
+    <h1>About</h1>
+    <img src="img/robot.png">
 </body>
 
 </html>
